tests/syntax_error/struct_init_js_syntax.jou
struct Foo:
    x: int

# attempting to use javascript-style for initing struct
def foo() -> void:
    foo = Foo{x: 1}  # Error: expected '=' followed by a value for field 'x', got ':'
